[tool.poetry]
name = "rubix-py"
version = "0.1.0"
description = ""
authors = ["NubeIO"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
Flask-JWT = "^0.3.2"
flask_cors = "^3.0.9"
Flask-SQLAlchemy = "^2.4.4"
SQLAlchemy = "^1.3.19"
requests = "^2.25.0"
uwsgi = "^2.0.19.1"
gunicorn = "^20.0.4"
gevent = "^20.9.0"
netifaces = "^0.10.9"
BAC0 = "^20.2.20"
bacpypes = "^0.18.3"
pymodbus = "^2.4.0"
paho-mqtt = "^1.5.1"
pyserial = "^3.5"
pandas = "^1.1.4"
influxdb = "^5.3.1"
schedule = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"